# dbc-codegen-demo

./: Cargo.toml  README.md  build.rs
dbc/: demo.dbc
src/: main.rs
